# Array

./: .gitmodules  Makefile.am  README.md  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  array-test.c  array-test.pc.in  array.c  array.h  array.pc.in  array_test_config  libarray.c  libarray.pc.in  libparray.c  parray.h
